# Canteen-Management-System

./: README.md  Student_info.json
Canteen-project/: MealQuantity.csv  Student_info.json  foodAnalysis.md  foodorders.csv  menu.json  pyproject.toml  setup.py  studentDailyOrder.csv
Canteen-project/Analysis/: analysisFood.py  meadAnalysis.py  stdAnalysis.py  wrapped_cli_tool.py
Canteen-project/canteen_project/: Data_analysis.py  QRcode.py  Store.py  analysis.ipynb  analysisFood.py  canteen_pos.py  helper_methods.py  meadAnalysis.py  nutrients_csvfile.csv  parent_portal.py  queue.py  stdAnalysis.py
Canteen-project/canteen_project/QR/: Qr.py  student.json
Canteen-project/tests/: test_canteen_pos.py  test_canteen_project.py  test_cash_scenario.py  test_parent_Portal.py  test_scenarios.py
Canteen-project/tests/flow/: cash.sim.txt  cash_with_multi_orders.sim.txt  cash_with_one_order.sim.txt  flo.py  max_daily_credit.sim.txt  run_and_quit.sim.txt
Scenarios/: additional_features.md  cash_scenario.md  credit_scenario.md  max_daily_credit_student_scenario.md  not_allowed_items_scenario.md  rechrge_balance_student_scenario.md  student_daily_meal_scenario.md  student_or_not_scenario.txt
