[tool.poetry]
name = "Canteen-project"
version = "0.1.0"
description = ""
authors = ["MohammadSalhab99 <mohammadsalhab8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
termcolor = "^1.1.0"
colorama = "^0.4.4"
strip-ansi = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
